--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
         <img src="https://cdn-icons-png.flaticon.com/256/12804/12804717.png" alt="תמונת הפרופיל שלי" class="profile-pic">
         <h1>שלום, אני מפתח אתרים ומשחקים!</h1>
         <p>
-            שמי מתן, למדתי תכנות במכללת פרוגיקס ואני גאה להציג את הפרויקטים שפיתחתי במהלך הקורס.
+            שמי גולן, למדתי תכנות במכללת פרוגיקס ואני גאה להציג את הפרויקטים שפיתחתי במהלך הקורס.
         </p>
     </header>
 
